:globe_with_meridians: Update with supplemental info

--- a/locales/en_US/en_US.json
+++ b/locales/en_US/en_US.json
@@ -1,3 +1,12 @@
 {
-  "COW": "{name}, you love cows!"
+  "translator": "anthony#8577",
+  "contributors": [],
+  "completion": "incomplete",
+  "aliases": ["en-us", "en", "english"],
+  "code": "en_US",
+  "flag": ":flag_us",
+  "friendly": "English (US)",
+  "strings": {
+    "COW": "**${name}**, you love cows!"
+  }
 }
