--- a/locales/fr_FR/fr_FR.json
+++ b/locales/fr_FR/fr_FR.json
@@ -1,3 +1,12 @@
 {
-  "COW": "{name}, tu aimes les vaches!"
+  "translator": "anthony#8577",
+  "contributors": [],
+  "completion": "incomplete",
+  "aliases": ["fr", "french", "francias", "françias"],
+  "code": "fr_FR",
+  "flag": ":flag_fr",
+  "friendly": "Françias (FR)",
+  "strings": {
+    "COW": "**${name}**, tu aimes les vaches!"
+  }
 }
